--- a/muzhouguoji/about.html
+++ b/muzhouguoji/about.html
@@ -8,13 +8,39 @@
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
     <title>关于牧洲</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/base.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/global.css" />
-    <script type="text/javascript" src="assets/js/jquery-1.8.2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/template.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/hamburgers.css" />
+    <link rel="stylesheet" href="assets/css/list.css" />
+    <link rel="stylesheet" href="assets/css/list_contact.css" />
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/flexslider.css" rel="stylesheet" />
+    <link href="assets/css/animate.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/div.css" />
+    <script type="text/javascript" src="assets/js/jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins.min.js"></script>
+    <script type="text/javascript" src="assets/js/custom.min.js"></script>
     <script type="text/javascript" src="assets/js/base.js"></script>
     <script type="text/javascript" src="assets/js/common.js"></script>
+    <script type="text/javascript" src="assets/js/type.num.js"></script>
+    <script type="text/javascript" src="assets/js/aboutChange.js"></script>
+    <script type="text/javascript" src="assets/js/headerSet.js"></script>
   </head>
   <body>
     <div class="head">
@@ -28,6 +54,11 @@
           height="75"
           alt="牧洲国际官网"
         />
+      </div>
+      <div class="hamburger hamburger--squeeze phone-icon">
+        <div class="hamburger-box">
+          <div class="hamburger-inner"></div>
+        </div>
       </div>
     </div>
     <div class="menu">
@@ -98,6 +129,16 @@
         </ul>
       </div>
     </div>
+    <div class="phone-nav">
+      <ul class="phone-nav-ul">
+        <li><a href="index.html">首页</a></li>
+        <li><a href="about.html" class="nav-active">关于牧洲</a></li>
+        <li><a href="project.html">移民项目</a></li>
+        <li><a href="overseas.html">海外房产</a></li>
+        <li><a href="news.html">新闻资讯</a></li>
+        <li><a href="contact.html">联系我们</a></li>
+      </ul>
+    </div>
     <script type="text/javascript">
       function show(li) {
         var getmenu = li.getElementsByTagName("div")[0];
@@ -133,4 +174,6 @@
       </div>
     </div>
   </body>
+
+  <script type="text/javascript" src="assets/js/main.js"></script>
 </html>
