--- a/muzhouguoji/index.html
+++ b/muzhouguoji/index.html
@@ -18,22 +18,29 @@
       type="text/css"
       href="assets/css/font-awesome.min.css"
     />
-    <!-- Plugins -->
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="assets/css/flexslider.css" rel="stylesheet" />
-    <link href="assets/css/animate.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="assets/css/template.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/base.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/global.css" />
-    <script type="text/javascript" src="assets/js/jquery-1.8.2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/template.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/hamburgers.css" />
+    <link rel="stylesheet" href="assets/css/list.css" />
+    <link rel="stylesheet" href="assets/css/list_contact.css" />
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/flexslider.css" rel="stylesheet" />
+    <link href="assets/css/animate.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/div.css" />
+    <script type="text/javascript" src="assets/js/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/plugins.min.js"></script>
     <script type="text/javascript" src="assets/js/custom.min.js"></script>
     <script type="text/javascript" src="assets/js/base.js"></script>
     <script type="text/javascript" src="assets/js/common.js"></script>
+    <script type="text/javascript" src="assets/js/type.num.js"></script>
+    <script type="text/javascript" src="assets/js/aboutChange.js"></script>
+    <script type="text/javascript" src="assets/js/headerSet.js"></script>
     <script type="text/javascript">
       $(function(){
           var winW = $(window).width();
@@ -67,6 +74,11 @@
           height="75"
           alt="牧洲国际官网"
         />
+      </div>
+      <div class="hamburger hamburger--squeeze phone-icon">
+        <div class="hamburger-box">
+          <div class="hamburger-inner"></div>
+        </div>
       </div>
     </div>
     <div class="menu">
@@ -136,6 +148,16 @@
           <li class=""><a href="contact.html" class="bb">联系我们</a></li>
         </ul>
       </div>
+    </div>
+    <div class="phone-nav">
+      <ul class="phone-nav-ul">
+        <li><a href="index.html" class="nav-active">首页</a></li>
+        <li><a href="about.html">关于牧洲</a></li>
+        <li><a href="project.html">移民项目</a></li>
+        <li><a href="overseas.html">海外房产</a></li>
+        <li><a href="news.html">新闻资讯</a></li>
+        <li><a href="contact.html">联系我们</a></li>
+      </ul>
     </div>
     <script type="text/javascript">
       function show(li) {
@@ -304,10 +326,10 @@
         </li>
       </ul>
       <ul class="num textc"></ul>
-      <div class="btn textc left">&lt;</div>
-      <div class="btn textc right">&gt;</div>
+      <div class="btn textc left" style="padding: 0;">&lt;</div>
+      <div class="btn textc right" style="padding: 0;">&gt;</div>
     </div>
-    <div class="container mar">
+    <div class="container mar project-container">
       <div class="item mt40">
         <div class="title"><h2>移民项目</h2></div>
         <div class="item_wrap mt28 clearfix">
@@ -327,7 +349,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>免费医疗</li>
                 <li>免费教育</li>
@@ -353,7 +375,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>无需创业、无需投资、无需购房</li>
                 <li>无语言学历要求</li>
@@ -379,7 +401,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>全家四代移民超高性价比</li>
                 <li>全球唯一“四位一体”国家</li>
@@ -405,7 +427,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>条件低、审批快</li>
                 <li>雇主担保成功率高</li>
@@ -431,7 +453,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>成功率高、100%移民成功</li>
                 <li>适合生活、美国的后花园</li>
@@ -457,7 +479,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>欧盟公民身份</li>
                 <li>环境好福利高发达资本主义国家</li>
@@ -483,7 +505,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>黄金护照：免签168个国家和地区</li>
                 <li>审理周期快</li>
@@ -509,7 +531,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>开设海外账户</li>
                 <li>转化身份</li>
@@ -535,7 +557,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>价格最低</li>
                 <li>速度最快</li>
@@ -561,7 +583,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>一步到位拿护照，周期最短</li>
                 <li>无语言、年龄、学历及语言要求</li>
@@ -587,7 +609,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>周期短6个月拿护照</li>
                 <li>自由出入美国</li>
@@ -613,7 +635,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="content">
+            <div class="project-item-content">
               <ul>
                 <li>欧盟小瑞士之称</li>
                 <li>医疗体系完善</li>
@@ -1014,7 +1036,7 @@
 
     <!-- BLOGS -->
     <section class="module bg-white-dark">
-      <div class="container">
+      <div class="container news-container">
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <div class="module-header text-center">
@@ -1150,4 +1172,6 @@
       </div>
     </div>
   </body>
-</html>
+
+  <script type="text/javascript" src="assets/js/main.js"></script>
+  </html>
