--- a/muzhouguoji/contact.html
+++ b/muzhouguoji/contact.html
@@ -48,12 +48,8 @@
         <a href="#"><img src="assets/images/logo.png" alt="牧洲国际官网"/></a>
       </h1>
       <div class="fr telym">
-        <img
-          src="assets/images/numbers.png"
-          width="300"
-          height="75"
-          alt="牧洲国际官网"
-        />
+        <div class="phone-number">400-078-9191</div>
+        <div class="phone-number">15712456730</div>
       </div>
       <div class="hamburger hamburger--squeeze phone-icon">
         <div class="hamburger-box">
@@ -149,10 +145,6 @@
         getmenu.style.display = "none";
       }
     </script>
-
-    <section
-      style="width:100%; padding:50px; min-height: 10px; background-color: #fff; box-sizing:border-box;"
-    ></section>
 
     <div class="content">
       <div class="content">
