--- a/muzhouguoji/overseas_detail.html
+++ b/muzhouguoji/overseas_detail.html
@@ -77,6 +77,7 @@
         </div>
       </div>
     </div>
+    <div class="wrapper-under-phone-header"></div>
     <div class="menu">
       <div class="menubox">
         <ul class="clearfix nav">
