--- a/muzhouguoji/contact.html
+++ b/muzhouguoji/contact.html
@@ -138,7 +138,67 @@
       <ul class="phone-nav-ul">
         <li><a href="index.html">首页</a></li>
         <li><a href="about.html">关于牧洲</a></li>
-        <li><a href="project.html">移民项目</a></li>
+        <li>
+          <a href="javascript:void(0);" id="menuProject">移民项目</a>
+          <div class="menurr clearfix" id="menuProjectSub">
+            <div class="sub-menu-row">
+              <a class="mlft" href="javascript:void(0);"
+                ><span class="passport">护照项目</span></a
+              >
+              <div class="mrft">
+                <div class="mrftone clearfix">
+                  <a href="javascript:void(0);" title="墨西哥">墨西哥</a>
+                  <a href="javascript:void(0);" title="保加利亚">保加利亚</a>
+                  <a href="javascript:void(0);" title="圣基茨和尼维斯"
+                    >圣基茨和尼维斯</a
+                  >
+                  <a href="javascript:void(0);" title="克罗地亚">克罗地亚</a>
+                  <a href="javascript:void(0);" title="巴拉圭">巴拉圭</a>
+                  <a href="javascript:void(0);" title="危地马拉">危地马拉</a>
+                  <a href="javascript:void(0);" title="马绍尔">马绍尔</a>
+                  <a href="javascript:void(0);" title="缅甸">缅甸</a>
+                </div>
+              </div>
+            </div>
+            <div class="sub-menu-row">
+              <a class="mlft" href="javascript:void(0);"
+                ><span class="passport">居留卡项目</span></a
+              >
+              <div class="mrft">
+                <div class="mrftone  clearfix">
+                  <a href="javascript:void(0);" title="希腊">希腊</a>
+                  <a href="javascript:void(0);" title="马耳他">马耳他</a>
+                  <a href="javascript:void(0);" title="奥地利">奥地利</a>
+                  <a href="javascript:void(0);" title="加拿大">加拿大</a>
+                  <a href="javascript:void(0);" title="斯洛文尼亚"
+                    >斯洛文尼亚</a
+                  >
+                  <a href="javascript:void(0);" title="斯洛伐克">斯洛伐克</a>
+                </div>
+              </div>
+            </div>
+            <div class="sub-menu-row">
+              <a class="mlft" href="javascript:void(0);"
+                ><span class="passport">技术移民</span></a
+              >
+              <div class="mrft">
+                <div class="mrftone clearfix">
+                  <a
+                    href="javascript:void(0);"
+                    title="加拿大大西洋四省雇主担保移民"
+                    >加拿大大西洋四省雇主担保移民</a
+                  >
+                  <a href="javascript:void(0);" title="加拿大安省雇主担保移民"
+                    >加拿大安省雇主担保移民</a
+                  >
+                  <a href="javascript:void(0);" title="加拿大联邦雇主担保移民"
+                    >加拿大联邦雇主担保移民</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
         <li><a href="overseas.html">海外房产</a></li>
         <li><a href="news.html">新闻资讯</a></li>
         <li><a href="contact.html" class="nav-active">联系我们</a></li>
